Added User Authentication

--- a/DotNetReact/API/appsettings.Development.json
+++ b/DotNetReact/API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection" : "Data Source=activities.db"
+  },
+  "AuthToken" : {
+    "Key" : "Secret to verify signature. This string must be atleast 256 bits!"
   }
 }
