--- a/DotNetReact/ReactApp/client-app/package.json
+++ b/DotNetReact/ReactApp/client-app/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^6.28.0",
+    "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.0",
     "uuid": "^11.0.3"
