--- a/DotNetReact/ReactApp/client-app/package.json
+++ b/DotNetReact/ReactApp/client-app/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@types/react-calendar": "^3.9.0",
+    "@types/react-datepicker": "^6.2.0",
+    "@types/yup": "^0.29.14",
     "axios": "^1.7.7",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.16.1",
     "formik": "^2.4.6",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
