--- a/DotNetReact/ReactApp/client-app/package.json
+++ b/DotNetReact/ReactApp/client-app/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/history": "^4.7.11",
     "@types/react-calendar": "^3.9.0",
     "@types/react-datepicker": "^6.2.0",
     "@types/yup": "^0.29.14",
     "axios": "^1.7.7",
     "date-fns": "^2.16.1",
     "formik": "^2.4.6",
+    "history": "^5.3.0",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
