--- a/DotNetReact/ReactApp/client-app/package.json
+++ b/DotNetReact/ReactApp/client-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@types/history": "^4.7.11",
     "@types/react-calendar": "^3.9.0",
     "@types/react-datepicker": "^6.2.0",
