--- a/DotNetReact/ReactApp/client-app/package.json
+++ b/DotNetReact/ReactApp/client-app/package.json
@@ -14,6 +14,7 @@
     "@types/history": "^4.7.11",
     "@types/react-calendar": "^3.9.0",
     "@types/react-datepicker": "^6.2.0",
+    "@types/react-infinite-scroller": "^1.2.5",
     "@types/yup": "^0.29.14",
     "axios": "^1.7.7",
     "date-fns": "^2.16.1",
@@ -27,6 +28,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-infinite-scroller": "^1.2.6",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
