--- a/DotNetReact/API/appsettings.Development.json
+++ b/DotNetReact/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Data Source=activities.db"
+    "DefaultConnection" : "Server=localhost, 1433;Database=Reactivities;User Id=SA;Password=Password@1;TrustServerCertificate=True"
   },
   "AuthToken" : {
     "Key" : "Secret to verify signature. This string must be atleast 256 bits!"
