--- a/DotNetReact/API/appsettings.Development.json
+++ b/DotNetReact/API/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection" : "Server=localhost, 1433;Database=Reactivities;User Id=SA;Password=Password@1;TrustServerCertificate=True",
-    "ClientURL" : "https://studious-space-trout-9769prpvr47p2977v-5173.app.github.dev/"
+    "ClientURL" : "https://studious-space-trout-9769prpvr47p2977v-5173.app.github.dev"
   },
   "AuthToken" : {
     "Key" : "Secret to verify signature. This string must be atleast 256 bits!"
