--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,37 +13,37 @@ services:
       - sql_data:/var/opt/mssql
     restart: always
 
-  elasticsearch:
-    image: elasticsearch:8.7.1
-    container_name: elasticsearch
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    networks:
-      - elk
-    volumes:
-      - es_data:/usr/share/elasticsearch/data
-    mem_limit: ${ES_MEM_LIMIT}
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+  # elasticsearch:
+  #   image: elasticsearch:8.7.1
+  #   container_name: elasticsearch
+  #   ports:
+  #     - "9200:9200"
+  #     - "9300:9300"
+  #   environment:
+  #     - discovery.type=single-node
+  #     - xpack.security.enabled=false
+  #     - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+  #   networks:
+  #     - elk
+  #   volumes:
+  #     - es_data:/usr/share/elasticsearch/data
+  #   mem_limit: ${ES_MEM_LIMIT}
+  #   ulimits:
+  #     memlock:
+  #       soft: -1
+  #       hard: -1
 
-  kibana:
-    image: docker.elastic.co/kibana/kibana:8.7.1
-    container_name: kibana
-    ports:
-      - "5601:5601"
-    environment:
-      - ELASTICSEARCH_HOSTS= ${ELASTICSEARCH_HOSTS}
-    depends_on:
-      - elasticsearch
-    networks:
-      - elk
+  # kibana:
+  #   image: docker.elastic.co/kibana/kibana:8.7.1
+  #   container_name: kibana
+  #   ports:
+  #     - "5601:5601"
+  #   environment:
+  #     - ELASTICSEARCH_HOSTS= ${ELASTICSEARCH_HOSTS}
+  #   depends_on:
+  #     - elasticsearch
+  #   networks:
+  #     - elk
 
 networks:
   elk:
