--- a/DotNetReact/ReactApp/client-app/package.json
+++ b/DotNetReact/ReactApp/client-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@greatsumini/react-facebook-login": "^3.4.0",
     "@microsoft/signalr": "^8.0.7",
     "@types/history": "^4.7.11",
     "@types/react-calendar": "^3.9.0",
@@ -49,6 +50,7 @@
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-mkcert": "^1.17.6"
   }
 }
